hasqd/tests/coptest/simple/db/negative/004.inp
# Set error paths

setcfg slice /bbb/db1/slice
setcfg index bbb//db1/index
setcfg index db1/index/
